--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       POSTGRES_DB: mydb
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
-    volumes:
-      - pgdata:/var/lib/postgresql/data/e
+    # volumes:
+    #   - pgdata:/var/lib/postgresql/data/e
   web:
     container_name: web
     build: .
@@ -32,4 +32,4 @@ services:
 
 volumes:
   static_volume:
-  pgdata:
+  # pgdata:
