--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 version: '3'
 services:
+
+  db:
+    image: postgres
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123456
+    volumes:
+      -   db_data:/var/lib/postgresql/data
+    networks:
+      - djnetwork
   web:
     container_name: web
     build: .
@@ -9,6 +20,18 @@ services:
     volumes:
       - .:/code
       - static_volume:/code/static
+    depends_on:
+      - db
+    networks:
+      - djnetwork
+   
+
+
+    
       
 volumes:
   static_volume:
+
+networks:
+  djnetwork:
+    driver: bridge
