--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     image: mdnazmulhossain/react-123
     ports:
       - "80:3000"
+
     depends_on:
       - web
     networks:
@@ -36,6 +37,7 @@ services:
   
 volumes:
   static_volume:
+  db_data:
 
 networks:
   djnetwork:
